--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/dbOS2?useUnicode=true&useJDBCC
 
 spring.datasource.username=root
 spring.datasource.password=cristian13
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 server.port=4043
