se quita autocommit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=cristian13
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.autocommit=false
 
 server.port=4043
